# carmen

./: .codecov.yml  Jenkinsfile  LICENSE  Makefile  README.md
.github/workflows/: python.yaml  rust.yaml  stacked-prs.yaml
CI/: Dockerfile.jenkins
analytics/: live_archive_disk_usage_analysis.py  plot-node-and-reuse-counts.py  plot_bertha_performance.py  plot_node_and_reuse_counts.py  storage_op_timestamps.py  verkle_best_specializations.py  verkle_node_plots.py
cpp/: WORKSPACE
cpp/archive/: BUILD  archive.h  archive_test_suite.h  test_util.h
cpp/backend/: BUILD  structure.h
cpp/common/: BUILD  account_state.cc  account_state.h  account_state_test.cc  benchmark.h  benchmark_benchmark.cc  byte_util.h  byte_util_test.cc  file_util.cc  file_util.h  file_util_test.cc  fstream.cc  fstream.h  fstream_test.cc  hash.cc  hash.h  hash_benchmark.cc  hash_test.cc  heterogenous_map.h  heterogenous_map_test.cc  hex_util.cc  hex_util.h  hex_util_test.cc  macro_utils.h  memory_usage.cc  memory_usage.h  memory_usage_test.cc  status_test_util.h  status_test_util_test.cc  status_util.h  status_util_test.cc  test_util.h  type.h  type_test.cc  variant_util.h  variant_util_test.cc
cpp/state/: BUILD  c_state.cc  c_state.h  c_state_test.cc  configuration.h  configurations.h  schema.cc  schema.h  schema_test.cc  state.h  state_benchmark.cc  state_test.cc  state_test_suite.h  update.cc  update.h  update_test.cc
cpp/tools/: BUILD  archive.cc
doc/: overview.md
go/: .gitignore  README.md  go.mod  go.sum
go/backend/: composed_snapshot.go  composed_snapshot_test.go  (+4 more)
rust/: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml
rust/benches/: caching.rs  carmen_state.rs  file_backend.rs  keccak_vs_pedersen.rs  pedersen_commitment.rs  utils.rs
rust/src/: error.rs  lib.rs  sync.rs
rust/src/database/: mod.rs  visitor.rs
rust/src/database/managed_trie/: lookup.rs  managed_trie_node.rs  mod.rs  store.rs  test_utils.rs  trie_commitment.rs  trie_update_log.rs
rust/src/database/verkle/: compute_commitment.rs  keyed_update.rs  leaf_commitment.rs  mod.rs  state.rs  test_utils.rs  verkle_trie.rs
rust/src/database/verkle/crypto/: commitment.rs  mod.rs  opening.rs  scalar.rs  window_signed_committer.rs
rust/src/database/verkle/embedding/: code.rs  mod.rs
rust/src/database/verkle/variants/: mod.rs
rust/src/database/verkle/variants/crate_crypto/: mod.rs
rust/src/database/verkle/variants/managed/: commitment.rs  mod.rs
rust/src/database/verkle/variants/managed/nodes/: empty.rs  id.rs  inner.rs  inner_delta.rs  leaf.rs  leaf_delta.rs  mod.rs  sparse_inner.rs  sparse_leaf.rs
rust/src/database/verkle/variants/simple/: mod.rs  node.rs  test_utils.rs
rust/src/ffi/: exported.rs  mod.rs
rust/src/node_manager/: cached_node_manager.rs  in_memory_node_manager.rs  lock_cache.rs  mod.rs  test_utils.rs
rust/src/node_manager/lock_cache/: mod.rs  shuttle_test_utils.rs  shuttle_tests.rs  test_utils.rs
rust/src/pool/: mod.rs  node_pool_with_storage.rs
rust/src/statistics/: mod.rs  node_count.rs
rust/src/statistics/formatters/: csv_writer.rs  human_readable_writer.rs  mod.rs
rust/src/statistics/scripts/: storage_op_timestamps.py  verkle_best_specializations.py  verkle_node_plots.py
rust/src/statistics/storage/: mod.rs
rust/src/storage/: error.rs  mod.rs  storage_with_flush_buffer.rs
rust/src/storage/file/: checkpoint_data.rs  file_backend.rs  file_storage_manager.rs  from_to_file.rs  metadata_file.rs  mod.rs  node_file_storage.rs  page_cached_file.rs  page_utils.rs  reuse_list_file.rs  root_ids_file.rs
rust/src/storage/file/file_backend/: mod.rs  multi_page_cached_file.rs  no_seek_file.rs  page_cached_file.rs  page_utils.rs  seek_file.rs
rust/src/storage/file/file_storage_manager/: metadata.rs  mod.rs  root_ids_file.rs
rust/src/storage/file/node_file_storage/: mod.rs  node_file_storage_metadata.rs  reuse_list_file.rs
rust/src/types/: cache.rs  commitment.rs  disk_representable.rs  has_delta_variant.rs  has_empty.rs  id.rs  mod.rs  node.rs  node_size.rs  to_node_kind.rs  to_node_type.rs  tree_id.rs  update.rs
rust/src/utils/: mod.rs  shuttle.rs  test_dir.rs  test_nodes.rs
scripts/: db-heal-test.py  download-jenkins.py  download-teamcity.py
(+596 files in other folders)
