# Copyright (c) 2025 Sonic Operations Ltd
#
# Use of this software is governed by the Business Source License included
# in the LICENSE file and at soniclabs.com/bsl11.
#
# Change Date: 2028-4-16
#
# On the date above, in accordance with the Business Source License, use of
# this software will be governed by the GNU Lesser General Public License v3.

[package]
name = "carmen"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.89"

[lib]
name = "carmen_rust"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "file_backend"
harness = false

[dependencies]
# datastructures
dashmap = { version = "6.1.0", features = ["inline"] }
quick_cache = "0.6.15"

# unsafe utils
zerocopy = { version = "0.8.26", features = ["derive"] }

# error handling
thiserror = "2.0.12"

# verkle trie
ark-ff = "0.4.2"
banderwagon = { git = "https://github.com/crate-crypto/rust-verkle.git", rev = "e27b8b4" }
ipa-multipoint = { git = "https://github.com/crate-crypto/rust-verkle.git", rev = "e27b8b4" }
verkle-trie = { git = "https://github.com/crate-crypto/rust-verkle.git", rev = "e27b8b4" }

[build-dependencies]
# FFI
bindgen = "0.72.0"

[dev-dependencies]
# testing
rstest = "0.26.1"
rstest_reuse = "0.7.0"

# parse hex strings into byte arrays (e.g. expected hashes)
const-hex = "1.14.1"

# automatically generate mocks from traits
mockall = "0.13.1"

# benchmark harness
criterion = "0.7.0"

# create temporary files and directories for tests

tempfile = "3.20.0"

[lints.rust]
macro_use_extern_crate = "warn"
unused_unsafe = "warn"

[lints.clippy]
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
filter_map_next = "warn"
format_push_string = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
items_after_statements = "warn"
large_types_passed_by_value = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
needless_collect = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
ref_patterns = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
